
Improvements::

* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons
* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
* allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility

Bug Fixes::

* correctly map all icons from FontAwesome 4 (#2373)
* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
* major improvement to OTF support following release of ttfunk 1.8.0 (automatic transitive dependency of prawn)

== 2.3.18 (2024-07-27) - @mojavelinux

Bug Fixes::

* position foreground image correctly when page layout changes (#2528)

Compliance::

* release lock on version of rexml (pulled in by asciidoctor-diagram and prawn-svg) now that incompatibility is resolved

== 2.3.17 (2024-06-01) - @mojavelinux

Improvements::

* always use /Producer field in document info to credit Asciidoctor PDF and Prawn, even when author is set (#2510)
* map `producer` attribute to /Producer field in document info to override or default value (#2510)
* map `publisher` attribute to /Creator field instead of /Producer field in document info; use author as fallback (#2510)

=== Details
